Fixed jumped description label on editing

--- a/app/assets/stylesheets/src/shared/_scaffolds.scss
+++ b/app/assets/stylesheets/src/shared/_scaffolds.scss
@@ -291,4 +291,6 @@ svg {
 
 .col-form-label-sm {
   font-size: 0.875rem;
+  padding-top: calc(0.25rem + var(--tblr-border-width));
+  padding-bottom: calc(0.25rem + var(--tblr-border-width));
 }
